Banco de dados criado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=CadastroDeNinjas
+# Driver do BD
+spring.datasource.driver-class-name=org.h2.Driver
+
+# Conexão do BD
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=naruto_bd
+spring.datasource.password=123
+
+# Configurações do JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
